--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -15,6 +15,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.idCliente)
+        @Html.HiddenFor(model => model.telefone.idTelefone)
 
         <div class="form-group">
             @Html.LabelFor(model => model.desc_nome_cliente, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -33,8 +34,24 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.telefone.num_tel_principal, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.telefone.num_tel_principal, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.telefone.num_tel_principal, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.telefone.num_tel_secundario, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.telefone.num_tel_secundario, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.telefone.num_tel_secundario, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
