--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,12 +59,33 @@
                     </li>
 
                     <li class="treeview">
-                        <a href="/Agenda/index"><i class="fa fa-shopping-basket icon-config"></i><span> Agenda</span></a>
+                        <a href="/Agenda/index"><i class="fa fa-calendar icon-config"></i><span> Agenda</span></a>
                     </li>
 
                     <li class="treeview">
                         <a href="/Clientes/index"><i class="fa fa-users icon-config"></i><span> Clientes</span></a>
                     </li>
+
+                    <li class="treeview">
+                        <a href="/Pagamentos/index"><i class="fa fa-money icon-config"></i><span> Pagamentos</span></a>
+                    </li>
+
+                    <li class="treeview">
+                        <a href="/Servicos/index"><i class="fa fa-history icon-config"></i><span> Serviços</span></a>
+                    </li>
+
+                    <li class="treeview">
+                        <a href="/Telefones/index"><i class="fa fa-phone icon-config"></i><span> Telefones</span></a>
+                    </li>
+
+                    <li class="treeview">
+                        <a href="/Tipos_Servico/index"><i class="fa fa-question-circle icon-config"></i><span> Cadastro de Serviços </span></a>
+                    </li>
+
+                    <li class="treeview">
+                        <a href="/Tipos_Pagamento/index"><i class="fa fa-calculator icon-config"></i><span> Cadastro de Pagamentos </span></a>
+                    </li>
+
                 </ul>
             </section>
             <!-- /.sidebar -->
