--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,11 +8,18 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
    
+    <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.min.css" rel="stylesheet" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.print.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>-->
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.min.js"></script>
     <!--[endif]-->
     
 
@@ -114,11 +121,11 @@
     <!--ESTILO DOS CAMPOS INPUT FILE documentação -> http://markusslima.github.io/jquery-filestyle/ -->
     <link href="~/Content/PanelContent/js/jquery-filestyle.css" rel="stylesheet" />
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    
     <script src="~/Content/bootstrap/js/bootstrap.min.js"></script>
     <script src="~/Content/plugins/fastclick/fastclick.js"></script>
     <script src="~/Content/PanelContent/js/app.js"></script>
     <script src="~/Content/PanelContent/js/jquery-filestyle.js"></script>
-
+    @RenderSection("Scripts",false)
 </body>
 </html>
