--- a/Views/Agenda/Create.cshtml
+++ b/Views/Agenda/Create.cshtml
@@ -23,6 +23,15 @@
         </div>
 
         <div class="form-group">
+            
+            <div class="col-md-10">
+                
+                @Html.DropDownList("ClienteNome", null, htmlAttributes: new { @class = "form-control" })
+                
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.desc_servico, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.desc_servico, new { htmlAttributes = new { @class = "form-control" } })
