--- a/Views/Agenda/Create.cshtml
+++ b/Views/Agenda/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.dt_data_agendada, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dt_data_agendada, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.dt_data_agendada, new { type = "datetime-local" })
                 @Html.ValidationMessageFor(model => model.dt_data_agendada, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -28,6 +28,15 @@
                 
                 @Html.DropDownList("ClienteNome", null, htmlAttributes: new { @class = "form-control" })
                 
+            </div>
+        </div>
+
+        <div class="form-group">
+
+            <div class="col-md-10">
+
+                @Html.DropDownList("TipoServ", null, htmlAttributes: new { @class = "form-control" })
+
             </div>
         </div>
 
@@ -57,13 +66,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.dt_cancelamento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.dt_cancelamento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.dt_cancelamento, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
