--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.print.css" media="print" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.min.css" rel="stylesheet" />
-<link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.print.css" rel="stylesheet" />
 
 <div id="calendar"></div>
 
@@ -40,12 +41,13 @@
                 {
                     $.each(data, function (i, v) {
                         events.push({
-                            title: v.desc_servico,
-                            description: v.Cliente_idCliente,
+                            title: v.Cliente.desc_nome_cliente,
+                            description: v.Tipo_Servico.desc_tipo_servico + " - " + v.desc_servico,
+                            telefone: v.Cliente.telefone.num_tel_principal,
                             start: moment(v.dt_data_agendada),
-                            end: v.dt_data_agendada + v.tempo_estimado,
+                            end: moment(v.dt_cancelamento),
                             color: v.ThemeColor,
-                            allDay: true
+                            allDay: false
                         });
                     })
                     GenerateCalendar(events);
@@ -58,7 +60,7 @@
             {
                 $('#calendar').fullCalendar('destroy');
                 $('#calendar').fullCalendar({
-                    contentHeight: 400,
+                    contentHeight: 800,
                     defaultDate: new Date(),
                     timeFormat: 'h(:mm)a',
                     header: {
@@ -78,6 +80,7 @@
                             $description.append($('<p/>').html('<b>End:</b>' + calEvent.end.format("DD-MM-YYYY HH:mm a")));
                         }
                     $description.append($('<p/>').html('<b>Description:</b>' + calEvent.description));
+                    $description.append($('<p/>').html('<b>Telefone:</b>' + calEvent.telefone));
                     $('#myModal #pDetails').empty().html($description);
 
                     $('#myModal').modal();
