--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,12 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Salão Diva</title>
+    <title>Salão Ieda</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
    
-    <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.min.css" rel="stylesheet" />
-    <link href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.print.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>-->
@@ -86,7 +84,7 @@
                     </li>
 
                     <li class="treeview">
-                        <a href="/Tipos_Servico/index"><i class="fa fa-question-circle icon-config"></i><span> Cadastro de Serviços </span></a>
+                        <a href="/Tipo_Servico/index"><i class="fa fa-question-circle icon-config"></i><span> Cadastro de Serviços </span></a>
                     </li>
 
                     <li class="treeview">
