--- a/Views/Servicos/Details.cshtml
+++ b/Views/Servicos/Details.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Details";
 }
 
+@{ 
+    SalaoIedaV4.Models.Context dc = new SalaoIedaV4.Models.Context();
+
+}
+
 <h2>Details</h2>
 
 <div>
@@ -23,7 +28,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.img_foto_servico)
+            <img src="~/Images/@Model.img_foto_servico" />
         </dd>
 
     </dl>
