--- a/Views/Agenda/Create.cshtml
+++ b/Views/Agenda/Create.cshtml
@@ -23,20 +23,19 @@
         </div>
 
         <div class="form-group">
-            
+            @Html.LabelFor(model => model.Cliente.desc_nome_cliente, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                
                 @Html.DropDownList("ClienteNome", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Cliente.desc_nome_cliente, "", new { @class = "text-danger" })
                 
             </div>
         </div>
 
         <div class="form-group">
-
+            @Html.LabelFor(model => model.Tipo_Servico.desc_tipo_servico, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-
                 @Html.DropDownList("TipoServ", null, htmlAttributes: new { @class = "form-control" })
-
+                @Html.ValidationMessageFor(model => model.Tipo_Servico.desc_tipo_servico, "", new { @class = "text-danger" })
             </div>
         </div>
 
