--- a/Views/Servicos/Edit.cshtml
+++ b/Views/Servicos/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Servicos", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.img_foto_servico, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.img_foto_servico, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" name="img_foto" id="img_foto" style="width: 100%;" /> <br />
                 @Html.ValidationMessageFor(model => model.img_foto_servico, "", new { @class = "text-danger" })
             </div>
         </div>
