--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -91,6 +91,10 @@
                         <a href="/Tipos_Pagamento/index"><i class="fa fa-calculator icon-config"></i><span> Cadastro de Pagamentos </span></a>
                     </li>
 
+                    <li class="treeview">
+                        <a href="/Report/index"><i class="fa fa-percent"></i><span> Relatórios </span></a>
+                    </li>
+
                 </ul>
             </section>
             <!-- /.sidebar -->
