--- a/Views/Agenda/Create.cshtml
+++ b/Views/Agenda/Create.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
+<h2>Novo Agendamento</h2>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Agenda</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -70,8 +69,16 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
+
+                @if (null != TempData["alertMessage"])
+                {
+                    <script type="text/javascript">
+                        alert('@TempData["alertMessage"]');
+                    </script>
+                }
             </div>
         </div>
+       
     </div>
 }
 
