--- a/Views/Agenda/Delete.cshtml
+++ b/Views/Agenda/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Remover Agendamento</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Realmente deletar agendamento?</h3>
 <div>
     <h4>Agenda</h4>
     <hr />
