--- a/Views/Agenda/Details.cshtml
+++ b/Views/Agenda/Details.cshtml
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.idAgenda }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.idAgenda }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
