--- a/Views/Agenda/Index.cshtml
+++ b/Views/Agenda/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Agendamentos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar novo Agendamento", "Create")
 </p>
 <table class="table">
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.dt_cancelamento)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idAgenda }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idAgenda }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idAgenda })
+            @Html.ActionLink("Editar", "Edit", new { id=item.idAgenda }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.idAgenda }) |
+            @Html.ActionLink("Deletar", "Delete", new { id=item.idAgenda })
         </td>
     </tr>
 }
