--- a/Views/Pagamentos/Index.cshtml
+++ b/Views/Pagamentos/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Pagamentos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Adicionar pagamento", "Create")
 </p>
 <table class="table">
     <tr>
@@ -41,9 +41,9 @@
             @Html.DisplayFor(modelItem => item.status_pagamento)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idPagamentos }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idPagamentos }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idPagamentos })
+            @Html.ActionLink("Editar", "Edit", new { id=item.idPagamentos }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.idPagamentos }) |
+            @Html.ActionLink("Deletar", "Delete", new { id=item.idPagamentos })
         </td>
     </tr>
 }
