--- a/Views/Telefones/Index.cshtml
+++ b/Views/Telefones/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Adicionar Novo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.num_tel_secundario)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.idTelefone }) |
-            @Html.ActionLink("Details", "Details", new { id=item.idTelefone }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.idTelefone })
+            @Html.ActionLink("Editar", "Edit", new { id=item.idTelefone }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.idTelefone }) |
+            @Html.ActionLink("Deletar", "Delete", new { id=item.idTelefone })
         </td>
     </tr>
 }
